--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>startup-company</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li id="Home"><a href="#Home">Home</a></li>
-                <li id="Services"><a href="#Services">Services</a></li>
+                <li id="Services"><a href="Services.html">Services</a></li>
                 <li id="Team"><a href="#Team">Team</a></li>
                 <li id="Contact"><a href="#Contact">Contact</a></li>
             </ul>
@@ -54,9 +54,11 @@
     </div>
 
 </div>
+
     <!-- end page home -->
 
 
     </header>
+
 </body>
 </html>
