--- a/Services.html
+++ b/Services.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
     <main id="Services">
-        <table border="2px">
+     <img src="./images/service.png" alt="" width="100%" height="100%">
+
+        <table border="2px"  width="100%" height="500px">
             <thead>
                 <td>Service</td>
                 <td>Description</td>
                 <td>Time</td>
                 <td>Price</td>
+
 
             </thead>
             <tr>
@@ -21,6 +24,8 @@
                 <td>Lorem, ipsum.</td>
                 <td>1Yers</td>
                 <td>free</td>
+
+
             </tr>
             <tr>
                 <td>Legal Support</td>
@@ -33,7 +38,19 @@
                 <td>Lorem, ipsum.</td>
                 <td>3000$</td>
             </tr>
+ 
         </table>
+        <ul >
+            <li> Lorem ipsum dolor sit amet.</li><hr>
+            <li> Lorem ipsum dolor sit amet.</li><hr>
+            <li> Lorem ipsum dolor sit amet.</li><hr>
+            <li> Lorem ipsum dolor sit amet.</li><hr>
+        </ul>
+        <video width="320" height="240" controls>
+            <source src="./images/v.mp4" type="video/mp4">
+            <source src="./images/v.mp4" type="video/ogg">
+          </video>
+          <button > <a href="index.html">go to the  home</a></button>
     </main>
     
 </body>
