--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li id="Home"><a href="#Home">Home</a></li>
                 <li id="Services"><a href="Services.html">Services</a></li>
-                <li id="Team"><a href="#Team">Team</a></li>
-                <li id="Contact"><a href="#Contact">Contact</a></li>
+                <li id="Team"><a href="team.html">Team</a></li>
+                <li id="Contact"><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
