--- a/Services.html
+++ b/Services.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <main id="Services">
+        <!-- img hero -->
      <img src="./images/service.png" alt="" width="100%" height="100%">
-
+<!-- start table -->
         <table border="2px"  width="100%" height="500px">
             <thead>
                 <td>Service</td>
@@ -40,12 +41,16 @@
             </tr>
  
         </table>
+        <!-- end table -->
+        <!-- start list -->
         <ul >
             <li> Lorem ipsum dolor sit amet.</li><hr>
             <li> Lorem ipsum dolor sit amet.</li><hr>
             <li> Lorem ipsum dolor sit amet.</li><hr>
             <li> Lorem ipsum dolor sit amet.</li><hr>
         </ul>
+        <!-- end liast -->
+        <!-- video -->
         <video width="320" height="240" controls>
             <source src="./images/v.mp4" type="video/mp4">
             <source src="./images/v.mp4" type="video/ogg">
