--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- start form -->
     <form action="">
         <fieldset>
         <legend>Log In</legend> <hr>
@@ -33,12 +34,14 @@
         <a href="#" target="_blank">instagram</a><br>
 
     </fieldset>
-    <button > <a href="index.html">go to the  home</a></button>
+
 
 
     
         
 
     </form>
+    <!-- end form -->
+    <button > <a href="index.html">go to the  home</a></button>
 </body>
 </html>
