--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- start  table -->
     <table width="100%" height="400%">
         <tr>
             <td>
@@ -28,6 +29,9 @@
             </td>
         </tr>
     </table>
+    <!-- end table -->
+    <!-- start  blockquote -->
+
     <h3>الاقتباس</h3>
     <blockquote cite="https://example.org/einstein">
         الحقيقة هي وهم، وإن كان ثابتًا جدًا.
