--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- start form -->
     <form action="">
         <fieldset>
-        <legend>Log In</legend> <hr>
+        <legend>Log In</legend> 
         <label for="name"> Name</label><br>
         <input type="text" id="name" name="name" required><br><hr>
         <label for="email"> Email</label><br>
